# Backwards-Comp-API-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html  styles.css
.github/workflows/: cmake.yml  deploy.yml
cmake/: compile_fail.cmake  my_add_test.cmake
include/: CMakeLists.txt  ChangeToEnumClass.hpp  MethodDefaultParams.hpp  NamespaceRename.hpp  ReturnTypeChange.hpp  StructRename.hpp
neg-tests/: CMakeLists.txt  ReadMe.md  RemoveConstReturnByValueTest.cpp  ReturnTypeChangeByValueTest.cpp  ReturnTypeChangeTest.cpp  ReturnTypeChange_Auto.cpp  ReturnTypeChange_Ref2Temp.cpp  StructRenameTest.cpp
some_unstable_lib/: CMakeLists.txt
some_unstable_lib/include/: ChangeToEnumClass.hpp  MethodDefaultParams.hpp  NamespaceRename.hpp  ReturnTypeChange.hpp  ReturnTypeChangeByValue.hpp
tests/: CMakeLists.txt  ChangeToEnumClassTest.cpp  MethodDefaultParamsTest.cpp  NamespaceRenameTest.cpp  ReturnTypeChangeByValueTest.cpp  ReturnTypeChangeTest.cpp  StructRenameTest.cpp  first_test.cpp
